551: Fix IdsColorPicker and IdsColor remaining features (fix advanced color-picker alignment)

--- a/src/components/ids-color-picker/ids-color-picker.scss
+++ b/src/components/ids-color-picker/ids-color-picker.scss
@@ -73,7 +73,7 @@ ids-input::part(container) {
 }
 
 .advanced-color-picker {
-  position: absolute;
+  position: unset;
   bottom: 0;
   right: 0;
 
